JE-62104 [Make all variables visible after node creation] Java Stacks